--- a/main.html
+++ b/main.html
@@ -4,11 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<button class="btn" id="btn">Button</button>
 	<!-- the entire body must be written by student -->
+	<button type="submit" id="btn" value="button">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
